// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List empty 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  color: #1e272e;
  border: 1px solid #D9DADD;
  border-radius: 4px;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  line-height: 1.5;
}

<div>
  <div
    className="c0"
  />
</div>
`;

exports[`List with items 1`] = `
.c1 {
  margin: 0;
  padding: 8px 16px;
  border-left: none;
  border-top: none;
  border-right: none;
  border-bottom: 1px solid #D9DADD;
  color: inherit;
  font-family: inherit;
}

.c1:last-child {
  border-bottom: none;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  color: #1e272e;
  border: 1px solid #D9DADD;
  border-radius: 4px;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  line-height: 1.5;
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      Item 1
    </div>
    <div
      className="c1"
    >
      Item 2
    </div>
    <div
      className="c1"
    >
      Item 3
    </div>
  </div>
</div>
`;
